--- a/config/config_admet.yaml
+++ b/config/config_admet.yaml
@@ -4,7 +4,7 @@ route_col: 'DoseRoute'
 time_cols_prefix: 'CT_TIME'
 conc_cols_prefix: 'CT_CON'
 save_path: '/vepfs/fs_ckps/cuiyaning/pk/pair_model'
-num_epochs: 100
+num_epochs: 1000
 batch_size: 16
 learning_rate: 1e-4
 eps: 1e-6
@@ -16,4 +16,6 @@ route: 'p.o.'
 method: 'NeuralODE'
 # pair_data_path: '/vepfs/fs_users/cuiyaning/data/uni_train_admet_pk/pair_data.json'
 task_stats: '/vepfs/fs_users/cuiyaning/data/uni_train_admet_pk/task_stats.json'
+task_vocab: '/vepfs/fs_users/cuiyaning/data/uni_train_admet_pk/admet_data_task_vocab.json'
 admet_data_path: '/vepfs/fs_users/cuiyaning/data/uni_train_admet_pk/admet_data.json'
+admet_test_data_path: '/vepfs/fs_users/cuiyaning/data/uni_train_admet_pk/admet_data_test.json'
