[update] pk+admet train

--- a/config/config_pair.yaml
+++ b/config/config_pair.yaml
@@ -3,16 +3,16 @@ dose_col: 'CT_Dose'
 route_col: 'DoseRoute'
 time_cols_prefix: 'CT_TIME'
 conc_cols_prefix: 'CT_CON'
-save_path: '/vepfs/fs_ckps/cuiyaning/pk/pair_model'
+save_path: '/vepfs/fs_ckps/cuiyaning/pk/pksmart/pk_smart_pair'
 num_epochs: 100
 batch_size: 16
 learning_rate: 1e-4
 eps: 1e-6
 warmup_ratio: 0.03
-loss_fn: 'log_mae_time_decay'
+loss_fn: 'log_mae_time_exp_decay'
+loss_alpha: 12
 pretrain: 'mol_pre_all_h_220816.pt'
 num_cmpts: 3
 route: 'p.o.'
 method: 'NeuralODE'
-pair_data_path: '/vepfs/fs_users/cuiyaning/data/uni_train_admet_pk/pair_data.json'
-task_stats: '/vepfs/fs_users/cuiyaning/data/uni_train_admet_pk/task_stats.json'
+pair_data_path: '/vepfs/fs_users/cuiyaning/data/pksmart/kfold_splits/fold0_train.json'
