--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,6 +13,6 @@ warmup_ratio: 0.03
 loss_fn: 'log_mae_time_decay'
 pretrain: 'mol_pre_all_h_220816.pt'
 num_cmpts: 3
-route: 'i.v.'
-method: 'mixmodel2'
+route: 'p.o.'
+method: 'NeuralODE'
 train_filepath: '/vepfs/fs_users/cuiyaning/uni-qsar/0821/optuna-dml/test_pk/data/CT_iv_train_val_50.csv'
